--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do the same but in 3D."
+    "Do the same in 3D."
    ]
   },
   {
